// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`info command basic info test case 1`] = `
[
  {
    "cache": true,
    "cwd": "/some/path/to/a",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "a#build",
    ],
    "dependents": [],
    "hash": "c6c367cb4149d14853f7574c42edec1e6e24658c",
    "id": "a#test",
    "label": "a - test",
    "options": {},
    "packageName": "a",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [],
    "hash": "06a7ab1e9202f62b6408631ab726a054228f0619",
    "id": "b#test",
    "label": "b - test",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/a",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [
      "a#test",
    ],
    "hash": "1fad316197c0a2ddeb24dd58ea789786f7e9344b",
    "id": "a#build",
    "label": "a - build",
    "options": {},
    "packageName": "a",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [],
    "dependents": [
      "b#test",
      "a#build",
    ],
    "hash": "f0cba92f4a986ccab32a5eb46a7936096224d441",
    "id": "b#build",
    "label": "b - build",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
]
`;

exports[`info command scoped info test case 1`] = `
[
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "build",
    ],
    "dependencies": [
      "b#build",
    ],
    "dependents": [],
    "hash": "06a7ab1e9202f62b6408631ab726a054228f0619",
    "id": "b#test",
    "label": "b - test",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "test",
    "weight": 1,
  },
  {
    "cache": true,
    "cwd": "/some/path/to/b",
    "depSpecs": [
      "^build",
    ],
    "dependencies": [],
    "dependents": [
      "b#test",
    ],
    "hash": "f0cba92f4a986ccab32a5eb46a7936096224d441",
    "id": "b#build",
    "label": "b - build",
    "options": {},
    "packageName": "b",
    "priority": 0,
    "task": "build",
    "weight": 1,
  },
]
`;
